--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="ServerAddress">Սերվերի հասցե</string>
     <string name="ServerPort">Սերվերի պորտ</string>
     <string name="Save">Պահպանել</string>
+    <string name="ReminderId">Հուշումների համար</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
