--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="ServerPort">Սերվերի պորտ</string>
     <string name="Save">Պահպանել</string>
     <string name="ReminderId">Հուշումների համար</string>
+    <string name="AllDepartments">Բոլոր բաժինները</string>
+    <string name="Kitchen">Խոհանոց</string>
+    <string name="Bar">Բար</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
