--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="Remove">Հեռացնել</string>
     <string name="ReadyOnly">Մայն պատրաստ է</string>
     <string name="Executing">Կատարվում է</string>
+    <string name="NO">ՈՉ</string>
+    <string name="YES">ԱՅՈ</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
