--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,8 @@
     <string name="PartnerOrders">Պատվերներ առաքիչներին</string>
     <string name="Empty"></string>
     <string name="SendToPartner">Ուղարկել՞ առաքիչին</string>
+    <string name="HC">ՀԾ</string>
+    <string name="NothigToSend">Ոչինչ չի ուղարկվելու</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
