--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="ServerPort">Սերվերի պորտ</string>
     <string name="Save">Պահպանել</string>
     <string name="ReminderId">Հուշումների համար</string>
-    <string name="AllDepartments">Բոլոր բաժինները</string>
     <string name="Kitchen">Խոհանոց</string>
     <string name="Bar">Բար</string>
     <string name="Begin">Սկսել</string>
@@ -23,24 +22,15 @@
     <string name="YES">ԱՅՈ</string>
     <string name="Error">Սխալ</string>
     <string name="OrderServer">Պատվերների սերվեր</string>
-    <string name="NewOrder">Նոր պատվեր</string>
-    <string name="ViewOrders">Դիտել պատվերները</string>
     <string name="Quantity">Քանակ</string>
-    <string name="BranchNameEmpty">Օբյեկտը նշված չէ</string>
-    <string name="StoreNameEmpty">Պահեստը նշված չէ</string>
     <string name="Correction">Ուղղում</string>
-    <string name="EmptyOrder">Պատվերը դատարկ է</string>
-    <string name="SelectBranch">Ընտրեք պահեստը</string>
-    <string name="Branch">Սրճարան</string>
     <string name="Storage">Պահեստ</string>
-    <string name="PartnerOrders">Պատվերներ առաքիչներին</string>
     <string name="Empty"></string>
-    <string name="SendToPartner">Ուղարկել՞ առաքիչին</string>
-    <string name="HC">ՀԾ</string>
     <string name="NothigToSend">Ոչինչ չի ուղարկվելու</string>
-    <string name="ExportToArmSoft">Արտահանել ՀԾ</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_play_music">PlayMusicActivity</string>
+    <string name="Network_error">Network error</string>
+    <string name="Close">Close</string>
 </resources>
